--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,8 +16,10 @@ $green-color-lime: #b7d12a !default;
 $green-color-dark: #009f06 !default;
 $green-color-light: #ddffdd !default;
 $green-color-bright: #11d68b !default;
-$purple-color: #b509ac !default;
-$light-purple-color: lighten($purple-color, 25%);
+$purple-color: #7978D6 !default;
+$mid-purple-color: lighten($purple-color, 15%);
+$light-purple-color: lighten($purple-color, 30%);
+$dark-purple-color: #424385 !default;
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
 $yellow-color: #efcc00 !default;
