--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -16,7 +16,8 @@
         {% endif %}
         {% for item in news limit: news_limit %}
           <tr>
-            <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
+            <!--th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th-->
+            <th scope="row" style="width: 20%">{{ item.date | date: '%b %Y' }}</th>
             <td>
               {% if item.inline %}
                 {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
