--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -4,25 +4,13 @@ layout: default
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">
-      {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-        {{ site.last_name }}
-      {% else %}
-        {{ site.title }}
-      {% endif %}
-    </h1>
-    <p class="desc">{{ page.subtitle }}</p>
-  </header>
-
-  <article>
-    {% if page.profile %}
-      <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
+    <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
         {% if page.profile.image %}
           {% assign profile_image_path = page.profile.image | prepend: 'assets/img/' %}
           {% if page.profile.image_circular %}
-            {% assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' %}
+            {% assign profile_image_class = 'img-fluid z-depth-0 rounded-circle' %}
           {% else %}
-            {% assign profile_image_class = 'img-fluid z-depth-1
+            {% assign profile_image_class = 'img-fluid z-depth-0
       rounded' %}
           {% endif %}
           {% capture sizes %}(min-width: {{site.max_width}}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px)
@@ -36,14 +24,34 @@ layout: default
           <div class="more-info">{{ page.profile.more_info }}</div>
         {% endif %}
       </div>
-    {% endif %}
+      <div class="profile_text">
+        {% if site.title == 'blank' %}
+          <span class="font-weight-bold">{{ site.first_name }} {{ site.middle_name }}
+          {{ site.last_name }}</span> 
+        {% else %}
+          {{ site.title }}
+        {% endif %}
+      </div>
+    </h1>
+    <p class="desc">{{ page.subtitle }}</p>
+    <p class="profile_base">{{ page.subsubtitle }}</p>
+  </header>
 
-    <div class="clearfix">{{ content }}</div>
+  <article>
+
+    <!-- About me -->
+    {% if page.profile %}
+      <div class="clearfix">
+        <!--h2>about</h2-->
+        {{ content }}
+      </div>
+    {% endif %}
 
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+        announcements
+        <!--a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a-->
       </h2>
       {% include news.liquid limit=true %}
     {% endif %}
@@ -59,7 +67,8 @@ layout: default
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
+        publications
+        <!--a href="{{ '/publications/' | relative_url }}" style="color: inherit">publications</a-->
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
