--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,7 +7,10 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
+  --global-dark-color: #{$dark-purple-color};
   --global-theme-color: #{$purple-color};
+  --global-mid-color: #{$mid-purple-color};
+  --global-light-color: #{$light-purple-color};
   --global-hover-color: #{$purple-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
