--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -4,7 +4,7 @@
     <div
       class="table-responsive"
       {% if include.limit and site.announcements.scrollable and news_size > 3 %}
-        style="max-height: 60vw"
+        style="max-height: 40vw"
       {% endif %}
     >
       <table class="table table-sm table-borderless">
@@ -17,7 +17,7 @@
         {% for item in news limit: news_limit %}
           <tr>
             <!--th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th-->
-            <th scope="row" style="width: 20%">{{ item.date | date: '%b %Y' }}</th>
+            <th scope="row" style="width: 20%; text-transform: lowercase; text-align: right">{{ item.date | date: '%B %Y' }}</th>
             <td>
               {% if item.inline %}
                 {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
