--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -2,9 +2,12 @@
   <footer class="fixed-bottom" role="contentinfo">
     <div class="container mt-0">
       &copy; Copyright {{ site.time | date: '%Y' }}
+      <span class="me">
       {{ site.first_name }}
       {{ site.middle_name }}
-      {{ site.last_name }}, {{ site.footer_text }}
+      {{ site.last_name }}</span>, {{ site.footer_text }}
+      <br \>
+      {{ site.footer_text_2 }}
       {% if site.impressum_path %}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
       {% endif %}
@@ -17,9 +20,12 @@
   <footer class="sticky-bottom mt-5" role="contentinfo">
     <div class="container">
       &copy; Copyright {{ site.time | date: '%Y' }}
+      <span class="me">
       {{ site.first_name }}
       {{ site.middle_name }}
-      {{ site.last_name }}, {{ site.footer_text }}
+      {{ site.last_name }}</span>, {{ site.footer_text }}
+      <br \>
+      {{ site.footer_text_2 }}
       {% if site.impressum_path %}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
       {% endif %}
