--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -4,7 +4,7 @@
     <div
       class="table-responsive"
       {% if include.limit and site.announcements.scrollable and news_size > 3 %}
-        style="max-height: 40vw"
+        style="max-height: 40vh"
       {% endif %}
     >
       <table class="table table-sm table-borderless">
