--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -11,6 +11,7 @@
   --global-theme-color: #{$purple-color};
   --global-mid-color: #{$mid-purple-color};
   --global-light-color: #{$light-purple-color};
+  --global-lightest-color: #{$lightest-purple-color};
   --global-hover-color: #{$purple-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
