--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,6 +19,7 @@ $green-color-bright: #11d68b !default;
 $purple-color: #7978D6 !default;
 $mid-purple-color: lighten($purple-color, 20%);
 $light-purple-color: lighten($purple-color, 30%);
+$lightest-purple-color: #EFF1FF !default;
 $dark-purple-color: #424385 !default;
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
