lightest purple alpha

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,7 +20,7 @@ strong {
 
 .me {
   color: var(--global-dark-color);
-  background-color: var(--global-lightest-color);
+  background-color: var(--global-light-color);
 }
 
 h2 {
