--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -151,68 +151,79 @@
         <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
       {% endif %}
       {% if entry.arxiv %}
-        <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
+        <a href="http://arxiv.org/abs/{{ entry.arxiv }}" target="_blank" class="btn btn-sm z-depth-0" role="button">arXiv</a>
       {% endif %}
       {% if entry.bibtex_show %}
         <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
       {% endif %}
       {% if entry.html %}
-        <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+        <a href="{{ entry.html }}" target="_blank" class="btn btn-sm z-depth-0" role="button">HTML</a>
       {% endif %}
       {% if entry.pdf %}
         {% if entry.pdf contains '://' %}
-          <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+          <a href="{{ entry.pdf }}" target="_blank" class="btn btn-sm z-depth-0" role="button">PDF</a>
         {% else %}
-          <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+          <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" target="_blank" class="btn btn-sm z-depth-0" role="button">PDF</a>
+        {% endif %}
+      {% endif %}
+      {% if entry.preprint %}
+        {% if entry.preprint contains '://' %}
+          <a href="{{ entry.preprint }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Preprint</a>
+        {% else %}
+          <a href="{{ entry.preprint | prepend: '/assets/pdf/' | relative_url }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Preprint</a>
+        {% endif %}
+      {% endif %}
+      {% if entry.dissertation %}
+        {% if entry.dissertation contains '://' %}
+          <a href="{{ entry.dissertation }}" target="_blank" class="btn btn-sm z-depth-0" role="button">PDF</a>
+        {% else %}
+          <a href="{{ entry.dissertation | prepend: '/assets/pdf/' | relative_url }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Dissertation</a>
         {% endif %}
       {% endif %}
       {% if entry.supp %}
         {% if entry.supp contains '://' %}
-          <a href="{{ entry.supp }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
+          <a href="{{ entry.supp }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Supp</a>
         {% else %}
-          <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
+          <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Supp</a>
         {% endif %}
       {% endif %}
-      {% if entry.demo %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Demo</a>
-      {% endif %}
       {% if entry.video %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Video</a>
+        <a href="{{ entry.video }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Video</a>
       {% endif %}
       {% if entry.short %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Preview</a>
+        <a href="{{ entry.short }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Preview</a>
       {% endif %}
       {% if entry.talk %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Talk</a>
-      {% endif %}
-      {% if entry.dissertation %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Dissertation</a>
+        <a href="{{ entry.talk }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Talk</a>
       {% endif %}
       {% if entry.defense %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Defense</a>
+        <a href="{{ entry.defense }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Defense</a>
+      {% endif %}
+      {% if entry.demo %}
+        <a href="{{ entry.demo }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Demo</a>
       {% endif %}
       {% if entry.blog %}
-        <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
+        <a href="{{ entry.blog }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Blog</a>
       {% endif %}
       {% if entry.code %}
-        <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
+        <a href="{{ entry.code }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Code</a>
       {% endif %}
       {% if entry.poster %}
         {% if entry.poster contains '://' %}
-          <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+          <a href="{{ entry.poster }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Poster</a>
         {% else %}
-          <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+          <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Poster</a>
         {% endif %}
       {% endif %}
       {% if entry.slides %}
         {% if entry.slides contains '://' %}
-          <a href="{{ entry.slides }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
+          <a href="{{ entry.slides }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Slides</a>
         {% else %}
-          <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
+          <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Slides</a>
         {% endif %}
       {% endif %}
       {% if entry.website %}
-        <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
+        <a href="{{ entry.website }}" target="_blank" class="btn btn-sm z-depth-0" role="button">Website</a>
       {% endif %}
     </div>
     {% if site.enable_publication_badges %}
@@ -276,11 +287,11 @@
       </div>
     {% endif %}
 
-    {% if entry.video %}
+    <!--{% if entry.video %}-->
       <!-- Hidden video block -->
-      <div class="abstract hidden">
+      <!--<div class="abstract hidden">
         <div style="text-align: center;">{% include video.liquid path=entry.video class="img-fluid rounded z-depth-1" controls=true %}</div>
       </div>
-    {% endif %}
+    {% endif %}-->
   </div>
 </div>
