--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -134,10 +134,15 @@
       {% capture entrymonth %}{{ " " }}{{ entry.month | capitalize }}{% endcapture %}
     {% endif %}
     {% if entry.year %}
-        {% capture entryyear %}{{ " " }}{{entry.year}}{% endcapture %}
+        {% capture entryyear %}{{ " " }}{{entry.year}}.{% endcapture %}
+    {% endif %}
+    {% if entry.bestpaper %}
+      {% capture bestpaper %} Best Paper <i class="fa-solid fa-trophy"></i>{% endcapture %}
+    {% else %}
+      {% capture bestpaper %}{% endcapture %}
     {% endif %}
     {% assign entrytype_text = entrytype | strip_html | strip %}
-    {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %} {% endif %}{{ entrymonth }}{{ entryyear }}{% endcapture %}
+    {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %} {% endif %}{{ entrymonth }}{{ entryyear }}{{ bestpaper }}{% endcapture %}
     <div class="periodical">
       {{ periodical | strip }}
     </div>
