--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,6 +23,10 @@ strong {
   background-color: var(--global-light-color);
 }
 
+.fa-solid {
+  color: var(--global-theme-color);
+}
+
 h2 {
   color: var(--global-mid-color);
   margin-top: 50px !important;
