--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -34,6 +34,9 @@
 {% if site.github_username %}
   <a href="https://github.com/{{ site.github_username }}" title="GitHub"><i class="fa-brands fa-github"></i></a>
 {% endif %}
+{% if site.bluesky_username %}
+  <a href="https://bsky.app/profile/{{ site.bluesky_username }}.bsky.social" title="Bluesky"><i class="fa-brands fa-bluesky"></i></a>
+{% endif %}
 {% if site.linkedin_username %}
   <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
 {% endif %}
