add chinese name

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -216,6 +216,8 @@ blockquote {
 
 .profile_text {
   padding-top: 80px !important;
+  font-weight: 400;
+  color: var(--global-theme-color);
 }
 
 .profile_base {
