--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -293,6 +293,7 @@ blockquote {
   a {
     &:hover {
       text-decoration: none;
+      color: var(--global-hover-color);
     }
   }
 
@@ -549,6 +550,7 @@ footer.sticky-bottom {
 }
 
 .post-title {
+  color: var(--global-theme-color);
   mjx-container[jax="CHTML"][display="true"] {
     display: unset;
   }
