--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -12,7 +12,7 @@
   --global-mid-color: #{$mid-purple-color};
   --global-light-color: #{$light-purple-color};
   --global-lightest-color: #{$lightest-purple-color};
-  --global-hover-color: #{$purple-color};
+  --global-hover-color: #{$dark-purple-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
