--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -34,6 +34,13 @@ h2 {
   font-weight: bold;
 }
 
+h3 {
+  color: var(--global-mid-color);
+  margin-bottom: 20px !important;
+  display: table;
+  font-weight: bold;
+}
+
 hr {
   border-top: 1px solid var(--global-divider-color);
 }
